Naming conventions for Composer repository

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "git-php-admin",
+    "name": "jan-drda/git-php-admin",
     "description": "Simple HTML UI written in PHP for executing GIT commands from web page",
     "keywords": ["git", "php", "admin", "administration", "version", "html"],
     "homepage": "https://github.com/jdrda/git-php-admin",
